src/objects/FSTR__ProcessComposerDateSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>custom setting to store date fields</description>
    <fields>
        <fullName>FSTR__Current_Business_Day__c</fullName>
        <inlineHelpText>This field indicates what business day of the month it is.  This will take into account business days and holidays if assigned to the Conga Orchestrate Business Hours setting.  When the current day is a non business day this field will be set to -1.</inlineHelpText>
        <label>Current Business Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Friday_of_the_Month__c</fullName>
        <label>First Friday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Monday_of_the_Month__c</fullName>
        <label>First Monday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Saturday_of_the_Month__c</fullName>
        <label>First Saturday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Sunday_of_the_Month__c</fullName>
        <label>First Sunday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Thursday_of_the_Month__c</fullName>
        <label>First Thursday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Tuesday_of_the_Month__c</fullName>
        <label>First Tuesday of the Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Wednesday_of_the_Month__c</fullName>
        <label>First Wednesday of the Month</label>
        <type>Date</type>
    </fields>
    <label>Conga Orchestrate Date Settings</label>
</CustomObject>